# JIC

./: README.md  READMe_ko.md
JICCLR/: JICCLR.sln
JICCLR/Benchmark/: Benchmark.cs  BenchmarkManager.cs
JICCLR/Example/: Example.csproj  Integer.cs  Program.cs  Test.cs
JICCLR/JIC/: JClassAttribute.cs  JIC.csproj  MainEntryAttribute.cs  ManagedEntry.cs
JICCLR/JIC/JNI/: JClass.cs  JMethod.cs
JICCLR/Plotting/: Plotting.csproj  Program.cs
JICJVM/: integrated.txt  settings.gradle.kts  spent.txt
JICJVM/gradle/wrapper/: gradle-wrapper.properties
JICJVM/src/main/java/me/ddayo/jic/: JIC.java
JICJVM/src/main/java/me/ddayo/jic/example/: AbstractTest.java  Test.java
JICNative/: CMakeLists.txt  library.cpp  library.h
